<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_box"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:background="@color/black">

        <ImageView
            android:id="@+id/image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_bulb" />

        <TextView
            android:id="@+id/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_marginTop="18dp"
            android:clickable="true"
            android:text="@string/h1"
            android:textColor="@color/heading"
            android:textSize="@dimen/heading"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/p1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/h1"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:text="@string/p1" />

        <TextView
            android:id="@+id/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/p1"
            android:layout_marginTop="18dp"
            android:text="@string/h2"
            android:textColor="@color/heading"
            android:textSize="@dimen/heading"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/h2"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:text="@string/p2" />

        <TextView
            android:id="@+id/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/p2"
            android:layout_marginTop="18dp"
            android:text="@string/h3"
            android:textColor="@color/heading"
            android:textSize="@dimen/heading"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/p3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/h3"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:text="@string/p3" />

        <TextView
            android:id="@+id/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/p3"
            android:layout_marginTop="18dp"
            android:text="@string/h4"
            android:textColor="@color/heading"
            android:textSize="@dimen/heading"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/p4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/h4"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:text="@string/p4" />

        <TextView
            android:id="@+id/h5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/p4"
            android:layout_marginTop="18dp"
            android:text="@string/h5"
            android:textColor="@color/heading"
            android:textSize="@dimen/heading"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/p5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/h5"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:text="@string/p5" />

    </ScrollView>

</RelativeLayout>

